--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -1,4 +1,6 @@
 .itemList {
-  margin-top: 1rem;
-  text-align: center;
+  display: grid;
+  gap: 20px;
+  padding: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
 }
