--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
 }
 
 .navbar {
-  color:#263238;
+  color: #263238;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -44,5 +44,9 @@
 
 .navbar ul a {
   font-size: 1.5rem;
+  color: rgb(63, 63, 63);
+}
+
+.navbar .cartWidget {
   color: rgb(63, 63, 63);
 }
