--- a/src/utils/alerts/alertToastify.module.css
+++ b/src/utils/alerts/alertToastify.module.css
@@ -4,3 +4,12 @@
   font-weight: 300;
   font-size: 1.3rem;
 }
+
+.alertYesNoQuestionWrapper {
+  opacity: 0.8;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  font-size: 1.3rem;
+  background-color: #82453a !important;
+  color: whitesmoke !important;
+}
