--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,7 +15,6 @@
   position: fixed;
   width: 100%;
   z-index: 100;
-
 }
 
 .navbar .contenedorLogo {
@@ -23,6 +22,7 @@
   gap: 0.5rem;
   align-items: center;
   color: rgb(63, 63, 63);
+  margin: 0.2rem;
 }
 
 .navbar .contenedorLogo div {
