--- a/src/components/ItemList/CardItem.module.css
+++ b/src/components/ItemList/CardItem.module.css
@@ -5,9 +5,9 @@
   background-color: rgb(21, 179, 82) !important;
   padding: 0px 5px !important;
   min-width: max-content !important;
-  margin: 5px !important;
+  margin: 5px 3px 8px 5px !important;
+  text-transform: none !important;
 }
-
 
 .MuiCardContent {
   padding: 1rem 0.5rem !important;
@@ -37,4 +37,3 @@
   -webkit-box-orient: vertical !important;
   overflow: hidden !important;
 }
-
