--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
 }
 
 .navbar {
-  color: #263238;
+  color: #3f3f3f;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +21,7 @@
   display: flex;
   gap: 0.5rem;
   align-items: center;
-  color: rgb(63, 63, 63);
+  color: #3f3f3f;
   margin: 0.2rem;
 }
 
@@ -45,7 +45,7 @@
 
 .navbar ul a {
   font-size: 1.5rem;
-  color: rgb(63, 63, 63);
+  color: #3f3f3f;
 }
 
 .navbar .cartWidget {
