--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -1,6 +1,34 @@
 .imgDescription {
-  width: 70%;
+  width: 100%;
   max-height: 400px;
-  margin: 0 auto;
-  object-fit: cover;
+  object-fit: contain;
+}
+
+.cardContenedor {
+  border-color: #546e7a;
+  border: solid 0.8px;
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: 4fr 3fr;
+  gap: 10px;
+}
+
+.imgContenedor {
+  display: flex;
+  justify-content: center;
+  background-color: whitesmoke;
+  border-radius: 5px;
+}
+
+.tituloItem {
+  font-size: 2.5rem !important;
+  font-weight: 600 !important;
+  color: #d0a9a2;
+  margin: 10px 0;
+}
+
+.descriptionItem {
+  font-size: 1.5rem !important;
+  font-weight: 300 !important;
+  color: #546e7a;
 }
