--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -1,10 +1,14 @@
 .containerItem {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 60% 40%;
     align-items: center;
-    margin: .5rem !important;
-    border-bottom: solid 1px var(--primaryLinghtColor);
+    margin: .8rem !important;
+    border: solid 1px var(--secondaryDarkColor);
+    border-radius: .5rem;
+    box-shadow: 0px 0px 5px #a4a4a4 !important;
+    /* border-bottom: solid 1px var(--primaryLinghtColor); */
     padding: .5rem;
+    background-color: var(--secondaryMainColor);
 }
 .titleItem {
     color: var(--primaryMaintColor);
@@ -13,17 +17,17 @@
 }
 
 .unitPriceItem {
-    color: var(--primaryLinghtColor);
+    color: var(--primaryMaintColor);
     font-size: 1rem;
     font-weight: 300;
 }
 
 .subtotalPriceItem {
-    color: var(--primaryLinghtColor);
+    color: var(--primaryMaintColor);
     font-size: 2rem;
-    margin: 0 1rem;
+    margin-right: .6rem;
     text-align: right;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .btnContainer{
@@ -38,6 +42,6 @@
     }
 
     .subtotalPriceItem {
-        font-size: 1.4rem;
+        font-size: 1.1rem;
     }
 }
