--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -1,8 +1,9 @@
 .imgDescription {
   width: 100%;
-  max-height: 500px;
+  max-height: 400px;
   margin: auto;
   object-fit: cover;
+  border-radius: 6px;
 }
 
 .cardContenedor {
@@ -12,6 +13,7 @@
   display: grid;
   grid-template-columns: 4fr 3fr;
   grid-template-rows: minmax(400px, max-content);
+  box-shadow: 0px 0px 5px #a4a4a4 !important;
   gap: 10px;
 }
 
@@ -20,14 +22,14 @@
   justify-content: center;
   align-items: center;
   background-color: var(--secondaryLinghtColor);
-  border-radius: 5px;
+  border-radius: 6px;
   max-height: 100%;
 }
 
 .tituloItem {
   font-size: 2.5rem !important;
   font-weight: 600 !important;
-  color: var(--secondaryMaintColor);
+  color: var(--secondaryMainColor);
   margin: 10px 0;
 }
 
@@ -45,12 +47,47 @@
 
 .btnAddToCart {
   margin: 1rem 0;
-  padding: 0.5rem;
+  padding: 0.3rem 0.8rem !important;
   font-size: 1.3rem !important;
+  min-width: 10px !important;
 }
 
 .spanAddToCart {
   margin-left: 0.7rem;
+}
+
+.btnFinishBuy {
+  margin: 1rem 0 !important;
+  padding: .7rem 1rem !important;
+  font-size: 1.5rem !important;
+}
+
+@media (max-width: 1070px) {
+  .btnAddToCart {
+    font-size: 1rem !important;
+  }
+
+  .btnFinishBuy {
+    font-size: 1rem !important;
+  }
+
+  .spanAddToCart {
+    margin-left: 0.3rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .spanAddToCart {
+    display: none;
+  }
+
+  .tituloItem {
+    font-size: 2.2rem !important;
+  }
+
+  .descriptionItem {
+    font-size: 1.3rem !important;
+  }
 }
 
 @media (max-width: 600px) {
@@ -68,25 +105,7 @@
     font-size: 2rem !important;
   }
 
-  descriptionItem {
-    font-size: 1rem !important;
-  }
-}
-
-@media (max-width: 1070px) {
-  .btnAddToCart {
-    font-size: 1rem !important;
-  }
-}
-
-@media (max-width: 900px) {
-  .spanAddToCart {
-    display: none;
-  }
-
-  .btnAddToCart {
-    margin: 1rem 0;
-    padding: 0.3rem !important;
-    width: 30px !important ;
+  .descriptionItem {
+    font-size: 1.2rem !important;
   }
 }
