--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,13 +5,13 @@
 }
 
 .navbar {
-  color: #3f3f3f;
+  color: var(--secondaryLinghtColor);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 7.5%;
-  background-color: #d0a9a2;
-  box-shadow: 0px 0px 5px #a4a4a4 !important;
+  background-color: var(--secondaryDarkColor);
+  box-shadow: 0px 2px 10px #707070 !important;
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -21,7 +21,7 @@
   display: flex;
   gap: 0.5rem;
   align-items: center;
-  color: #3f3f3f;
+  color: var(--secondaryLinghtColor);
   margin: 0.2rem;
 }
 
@@ -43,13 +43,14 @@
   gap: 2.5rem;
 }
 
-.navbar ul a {
+.btnLinks {
+  font-weight: 400;
   font-size: 1.5rem;
-  color: #3f3f3f;
+  color: var(--secondaryLinghtColor);
 }
 
 .navbar .cartWidget {
-  color: rgb(63, 63, 63);
+  color:var(--secondaryLinghtColor);
 }
 
 .contenedorCartMenu {
