--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --primaryDarkColor: #263238;
   --secondaryLinghtColor: #edebe8;
   --secondaryMainColor: #d0a9a2;
-  --secondaryDarkColor: #a1836a;
+  --secondaryDarkColor: #b18780;
 }
 
 html {
