--- a/src/components/ItemList/CardItem.module.css
+++ b/src/components/ItemList/CardItem.module.css
@@ -29,6 +29,7 @@
   -webkit-line-clamp: 3 !important;
   -webkit-box-orient: vertical !important;
   overflow: hidden !important;
+  text-align: justify;
 }
 
 .lineMaxTitle {
