--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-height: 400px;
   margin: auto;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 6px;
 }
 
@@ -15,6 +15,8 @@
   grid-template-rows: minmax(400px, max-content);
   box-shadow: 0px 0px 5px #a4a4a4 !important;
   gap: 10px;
+  padding: 1rem;
+  background-color: #fff;
 }
 
 .imgContenedor {
@@ -24,6 +26,7 @@
   background-color: var(--secondaryLinghtColor);
   border-radius: 6px;
   max-height: 100%;
+    background-color: #fff;
 }
 
 .tituloItem {
@@ -96,6 +99,8 @@
     flex-direction: column;
     gap: 10px;
   }
+
+ 
 
   .imgDescription {
     max-height: 250px;
